src/objects/WaxCenterStaff__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>WaxCenterStaffs</relationshipLabel>
        <relationshipName>WaxCenterStaffs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Asst manager</fullName>
                </value>
                <value>
                    <fullName>Sales manager</fullName>
                </value>
                <value>
                    <fullName>Waxers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wax_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wax Center</label>
        <referenceTo>Wax_Center__c</referenceTo>
        <relationshipLabel>WaxCenterStaffs</relationshipLabel>
        <relationshipName>WaxCenterStaffs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>WaxCenterStaff</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>WaxCenterStaff Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WaxCenterStaffs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>